<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#2196F3"
                android:onClick="addBTN"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textColorHighlight="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/subtractBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#2196F3"
                android:onClick="subtractBTN"
                android:text="@string/subtract"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/multiplyBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#2196F3"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/divideBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#2196F3"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/nineBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/eightBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/sevenBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/sixBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fiveBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/fourBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/threeBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/twoBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/zeroBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/dotBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/design_default_color_background"
                android:onClick="dotBTN"
                android:text="@string/dot"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/bracketsBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00BCD4"
                android:onClick="bracketsBTN"
                android:text="@string/brackets"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/equalBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="equalBTN"
                android:text="@string/equal" />

            <Button
                android:id="@+id/plusminusBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:onClick="plusMinusBTN"
                android:text="@string/plusMinus"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/clearBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/backspaceBTN"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#827717"

                android:onClick="backspaceBTN"
                android:text="@string/backspace"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/display"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088"
        android:autofillHints="false"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textSize="36sp"
        tools:ignore="ladelfor"/>
</androidx.constraintlayout.widget.ConstraintLayout>